--- a/style.css
+++ b/style.css
@@ -9,5 +9,8 @@ background-size: cover;
 .summary {
     text-align: center; 
     background-color: white; 
-    
 }
+.content {
+    text-align: center;  
+ }
+
