--- a/style.css
+++ b/style.css
@@ -12,5 +12,10 @@ background-size: cover;
 }
 .content {
     text-align: center;  
+    font-family:"abril fatface";
+ }
+ .comingsoon {
+     position: relative;
+    bottom: 20px;
  }
 
