--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ background-size: cover;
 
 .summary {
     text-align: center; 
-    background-color: white; 
+    background-color: transparent; 
 }
 .content {
     text-align: center;  
