--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 #people {
     font-style:italic;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: black;
 }
 body {
 background-image: url('background.png');
@@ -30,6 +32,7 @@ background-size:cover;
  #title {
      font-size:30px;
      padding:10px;
+     text-align:center;
  }
 
 
@@ -43,10 +46,10 @@ button{
     color:red;
     font-size:20px;
 
-   
-    text-align:center;
 }
-
+.csan{
+   margin:auto;
+}
     
 
 
